task: make it my own completed

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     </head>
     <body>
         <div class="card">
-            <img class="avatar" src="images/per.png">
+            <img class="avatar" src="images/jm.jpeg" alt="Avatar of João Marcelo" />
             <div >
-                <h3>Per Harald Borgen</h3>
+                <h3>João Marcelo Martins Miranda</h3>
                 <p>Frontend Developer</p>
-                <h4>Oslo, Norway</h4>
+                <h4>Leiria, Portugal</h4>
             </div>
         </div>
     </body>
